test/files/neg/t4515.check
t4515.scala:37: error: type mismatch;
 found   : _0(in method apply) where type _0(in method apply)
 required: (some other)_0(in method apply)
        handler.onEvent(target, ctx.getEvent, node, ctx)
                                    ^
one error found
